// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectProfileImage > should handle upload file 1`] = `
<DocumentFragment>
  <div
    class="group space-y-2"
  >
    <span
      class="cursor-default text-sm font-semibold text-theme-secondary-text transition-colors duration-100 group-hover:text-theme-primary-600"
    >
      Profile Image
    </span>
    <div
      class="flex flex-row"
    >
      <div
        class="relative z-0 h-20 w-20"
      >
        <div
          class="css-1vo35tn"
        >
          <img
            alt="Avatar"
            class="min-h-full object-cover"
            data-testid="SelectProfileImage__avatar-image"
            src="test"
          />
          <button
            class="upload-button-overlay absolute z-10 h-full w-full overflow-hidden p-1 opacity-0 transition-opacity duration-200 focus:outline-none"
            data-testid="SelectProfileImage__upload-button"
            type="button"
          >
            <div
              class="flex h-full items-center justify-center rounded-full bg-theme-secondary-900 opacity-85 dark:bg-black"
            >
              <div
                class="text-white dark:text-theme-secondary-200 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="arrow-up-bracket"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="absolute -right-2 -top-2 z-20"
        >
          <button
            class="flex h-5 w-5 items-center justify-center p-0 css-qemr9e"
            data-testid="SelectProfileImage__remove-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should not allow to upload an invalid file image 1`] = `
<DocumentFragment>
  <div
    class="group space-y-2"
  >
    <span
      class="cursor-default text-sm font-semibold text-theme-secondary-text transition-colors duration-100 group-hover:text-theme-primary-600"
    >
      Profile Image
    </span>
    <div
      class="flex flex-row"
    >
      <div
        class="relative z-0 h-20 w-20"
      >
        <div
          class="css-1vo35tn"
        >
          <img
            alt="Avatar"
            class="min-h-full object-cover"
            data-testid="SelectProfileImage__avatar-image"
            src="test"
          />
          <button
            class="upload-button-overlay absolute z-10 h-full w-full overflow-hidden p-1 opacity-0 transition-opacity duration-200 focus:outline-none"
            data-testid="SelectProfileImage__upload-button"
            type="button"
          >
            <div
              class="flex h-full items-center justify-center rounded-full bg-theme-secondary-900 opacity-85 dark:bg-black"
            >
              <div
                class="text-white dark:text-theme-secondary-200 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="arrow-up-bracket"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="absolute -right-2 -top-2 z-20"
        >
          <button
            class="flex h-5 w-5 items-center justify-center p-0 css-qemr9e"
            data-testid="SelectProfileImage__remove-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should not allow to upload when user aborted a request 1`] = `
<DocumentFragment>
  <div
    class="group space-y-2"
  >
    <span
      class="cursor-default text-sm font-semibold text-theme-secondary-text transition-colors duration-100 group-hover:text-theme-primary-600"
    >
      Profile Image
    </span>
    <div
      class="flex flex-row"
    >
      <div
        class="relative z-0 h-20 w-20"
      >
        <div
          class="css-1vo35tn"
        >
          <img
            alt="Avatar"
            class="min-h-full object-cover"
            data-testid="SelectProfileImage__avatar-image"
            src="test"
          />
          <button
            class="upload-button-overlay absolute z-10 h-full w-full overflow-hidden p-1 opacity-0 transition-opacity duration-200 focus:outline-none"
            data-testid="SelectProfileImage__upload-button"
            type="button"
          >
            <div
              class="flex h-full items-center justify-center rounded-full bg-theme-secondary-900 opacity-85 dark:bg-black"
            >
              <div
                class="text-white dark:text-theme-secondary-200 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="arrow-up-bracket"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="absolute -right-2 -top-2 z-20"
        >
          <button
            class="flex h-5 w-5 items-center justify-center p-0 css-qemr9e"
            data-testid="SelectProfileImage__remove-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should not handle upload file 1`] = `
<DocumentFragment>
  <div
    class="group space-y-2"
  >
    <span
      class="cursor-default text-sm font-semibold text-theme-secondary-text transition-colors duration-100 group-hover:text-theme-primary-600"
    >
      Profile Image
    </span>
    <div
      class="flex flex-row"
    >
      <div
        class="relative z-0 h-20 w-20"
      >
        <div
          class="css-1vo35tn"
        >
          <img
            alt="Avatar"
            class="min-h-full object-cover"
            data-testid="SelectProfileImage__avatar-image"
            src="test"
          />
          <button
            class="upload-button-overlay absolute z-10 h-full w-full overflow-hidden p-1 opacity-0 transition-opacity duration-200 focus:outline-none"
            data-testid="SelectProfileImage__upload-button"
            type="button"
          >
            <div
              class="flex h-full items-center justify-center rounded-full bg-theme-secondary-900 opacity-85 dark:bg-black"
            >
              <div
                class="text-white dark:text-theme-secondary-200 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="arrow-up-bracket"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="absolute -right-2 -top-2 z-20"
        >
          <button
            class="flex h-5 w-5 items-center justify-center p-0 css-qemr9e"
            data-testid="SelectProfileImage__remove-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should render 1`] = `
<DocumentFragment>
  <div
    class="group space-y-2"
  >
    <span
      class="cursor-default text-sm font-semibold text-theme-secondary-text transition-colors duration-100 group-hover:text-theme-primary-600"
    >
      Profile Image
    </span>
    <div
      class="flex flex-row"
    >
      <div
        class="h-20 w-20 rounded-md border-2 border-dashed border-theme-secondary-400 p-1 focus-within:border-solid focus-within:border-theme-primary-400 dark:border-theme-secondary-700"
      >
        <div
          class="h-full overflow-hidden rounded-full"
        >
          <div
            class="css-1vxhzvl"
          >
            <button
              class="css-6419sw"
              data-testid="SelectProfileImage__upload-button"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div
                  class="text-theme-primary-600 dark:text-theme-secondary-200 css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="arrow-up-bracket"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should render with value svg 1`] = `
<DocumentFragment>
  <div
    class="group space-y-2"
  >
    <span
      class="cursor-default text-sm font-semibold text-theme-secondary-text transition-colors duration-100 group-hover:text-theme-primary-600"
    >
      Profile Image
    </span>
    <div
      class="flex flex-row"
    >
      <div
        class="relative z-0 h-20 w-20"
      >
        <div
          class="css-1vo35tn"
        >
          <img
            alt="Avatar"
            class="min-h-full object-cover"
            data-testid="SelectProfileImage__avatar-identicon"
            src="data:image/svg+xml;utf8,<svg>test</svg>"
          />
          <span
            class="absolute text-2xl font-semibold text-white"
          />
          <button
            class="upload-button-overlay absolute z-10 h-full w-full overflow-hidden p-1 opacity-0 transition-opacity duration-200 focus:outline-none"
            data-testid="SelectProfileImage__upload-button"
            type="button"
          >
            <div
              class="flex h-full items-center justify-center rounded-full bg-theme-secondary-900 opacity-85 dark:bg-black"
            >
              <div
                class="text-white dark:text-theme-secondary-200 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="arrow-up-bracket"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectProfileImage > should render without value svg 1`] = `
<DocumentFragment>
  <div
    class="group space-y-2"
  >
    <span
      class="cursor-default text-sm font-semibold text-theme-secondary-text transition-colors duration-100 group-hover:text-theme-primary-600"
    >
      Profile Image
    </span>
    <div
      class="flex flex-row"
    >
      <div
        class="relative z-0 h-20 w-20"
      >
        <div
          class="css-1vo35tn"
        >
          <img
            alt="Avatar"
            class="min-h-full object-cover"
            data-testid="SelectProfileImage__avatar-image"
            src="test"
          />
          <button
            class="upload-button-overlay absolute z-10 h-full w-full overflow-hidden p-1 opacity-0 transition-opacity duration-200 focus:outline-none"
            data-testid="SelectProfileImage__upload-button"
            type="button"
          >
            <div
              class="flex h-full items-center justify-center rounded-full bg-theme-secondary-900 opacity-85 dark:bg-black"
            >
              <div
                class="text-white dark:text-theme-secondary-200 css-1i4b0eq"
                height="20"
                width="20"
              >
                <svg
                  id="arrow-up-bracket"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M19 13.4v1.9c0 2.1-1.7 3.7-3.7 3.7H4.7c-2 0-3.7-1.7-3.7-3.7v-1.9m9.05-.3V2m-4.7 4.7l4.7-4.7 4.6 4.7"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="absolute -right-2 -top-2 z-20"
        >
          <button
            class="flex h-5 w-5 items-center justify-center p-0 css-qemr9e"
            data-testid="SelectProfileImage__remove-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-15txs7d"
                height="10"
                width="10"
              >
                <svg
                  id="cross"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <path
                      d="M.954 18.981l18-18M18.954 18.981l-18-18"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
